container-logs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-logs-svc
spec:
  type: ClusterIP
  selector:
    app: container-logs
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
